--- a/neatTaskWeb/package.json
+++ b/neatTaskWeb/package.json
@@ -32,6 +32,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
     "react-test-renderer": "^16.7.0"
   }
 }
